# is-it-chill-tonight

./: .gitignore  README.md  package.json
apps/server/is-it-chill-chat-server/is_it_chill_chat_server/: main.py
apps/unused/event_scraper/is-it-chill-event-scraper/: dump.html  pyproject.toml
apps/unused/event_scraper/is-it-chill-event-scraper/is_it_chill_event_scraper/: main.py
apps/unused/server/is-it-chill-chat-server/: pyproject.toml
apps/web/: env.d.ts  package.json  wrangler.toml
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/events/: route.ts
apps/web/app/api/surveys/: route.ts
apps/web/app/api/venues/: route.ts
apps/web/app/chat/: page.tsx
apps/web/app/lib/cookies/: venues.ts
apps/web/app/lib/ra-scraper/: fetchEvents.ts  syncEventsDb.ts
apps/web/app/lib/time/: utils.ts
apps/web/app/old-home/: page.tsx
apps/web/app/server/db/: schema.ts
apps/web/app/venues/: page.tsx
apps/web/migrations/: 0001_hesitant_caretaker.sql  0002_ancient_energizer.sql  0003_empty_shatterstar.sql  0004_kind_marauders.sql  0005_colorful_talon.sql
apps/web/migrations/meta/: 0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  _journal.json
apps/web/scripts/db/: venueData.sql
scripts/: setup.ts
