[tool.poetry]
name = "is-it-chill-event-scraper"
version = "0.1.0"
description = ""
authors = ["Tony Oliverio <tony.oliverio1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.40.8"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
