[tool.poetry]
name = "is-it-chill-chat-server"
version = "0.1.0"
description = ""
authors = ["Tony Oliverio <tony.oliverio1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
